--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,6 @@
         <script src="./index.js" type="text/javascript"></script>
     </header>
     <body>
-        <h1>hi</h1>
-        <canvas width=500 height=300 id="canvas"></canvas>
+        if you can see this then no error in build
     </body>
 </html>
